Fri Dec 11 23:59:24 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * docs/html/multicast/index.html:

          Added additional verbiage for rate limiting issues.

Fri Dec 11 23:30:18 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/Definitions.h:
        * dds/DCPS/DisjointSequence.h:
        * dds/DCPS/DisjointSequence.inl:
        * dds/DCPS/DisjointSequence.cpp:
        * dds/DCPS/transport/framework/TransportSendBuffer.h:
        * dds/DCPS/transport/framework/TransportSendBuffer.inl:
        * dds/DCPS/transport/framework/TransportSendBuffer.cpp:
        * dds/DCPS/transport/multicast/ReliableMulticast.h:
        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:

          Refactored MULTICAST_NAKACK mechanism to be proactive; peers
          will now shift away unrecoverable samples upon reception.

Fri Dec 11 23:29:19 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>

        * tools/odds_monitor/MonitorDataModel.cpp:

          Add missing null pointer check.

Fri Dec 11 20:03:05 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * docs/html/multicast/index.html:

          Updated design notes with latest changes.

Fri Dec 11 19:55:30 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastConfiguration.h:
        * dds/DCPS/transport/multicast/MulticastConfiguration.cpp:
        * dds/DCPS/transport/multicast/multicast.ini-dist:

          Reverted default nak_interval to 2000 (2 seconds).

Fri Dec 11 19:46:42 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/ReliableMulticast.h:
        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:

          Added support for NAK suppression.

Fri Dec 11 00:15:57 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorData.cpp:

          remove_repo() - extended QString::toStdString() workaround to
                          this method.
