@@ -647,7 +647,7 @@ The proposed mechanism is required to satisfy several [[use cases|UseCases]] dur
 
 [[Previous work|Reuse]] done to demonstrate the ability of DDS to provide a data transfer capability within a dynamic topology of point to point links established the ability of the DDS service to route data over defined connections within a topology.  Work was done on that project that prototyped interfaces needed to manage the federation of repositories and can be used directly.</pre>
 </div>
-<div title="PageTemplate" modifier="OpenDDS" created="200911302019" modified="200911302100" server.type="file" server.host="file:///export/OCI/DDS/docs/html/template/index.html" server.page.revision="200911302100">
+<div title="PageTemplate" modifier="OpenDDS" created="200911302019" modified="200912120004" server.type="file" server.host="file:///export/DDS/docs/html/template/index.html" server.page.revision="200912120004">
 <pre>&lt;!--{{{--&gt;
 &lt;div class='header'&gt;
 &lt;div class='headerForeground'&gt;
@@ -663,6 +663,7 @@ The proposed mechanism is required to satisfy several [[use cases|UseCases]] dur
 &lt;div id='displayArea'&gt;
 &lt;div id='messageArea'&gt;&lt;/div&gt;
 &lt;div id='tiddlerDisplay'&gt;&lt;/div&gt;
+&lt;div class='footer'&gt;$Id$&lt;/div&gt;
 &lt;/div&gt;
 &lt;!--}}}--&gt;</pre>
 </div>
@@ -813,7 +814,7 @@ This is the same processing as [[use case 1|UseCase1]] [[scenario 3|Scenario1_3]
 <div title="SiteUrl" modifier="OpenDDS" created="200911302027" server.type="file" server.host="file:///export/OCI/DDS/docs/html/template/index.html" server.page.revision="200911302027">
 <pre>http://www.ociweb.com/</pre>
 </div>
-<div title="StyleSheet" modifier="OpenDDS" created="200911302014" modified="200912011927" server.type="file" server.host="file:///export/OCI/DDS/docs/html/template/index.html" server.page.revision="200912011927">
+<div title="StyleSheet" modifier="OpenDDS" created="200911302014" modified="200912120011" server.type="file" server.host="file:///export/DDS/docs/html/template/index.html" server.page.revision="200912120011">
 <pre>a:hover {
     text-decoration: none;
 }
@@ -832,6 +833,13 @@ This is the same processing as [[use case 1|UseCase1]] [[scenario 3|Scenario1_3]
 .headerForeground a {
     color:[[ColorPalette::SecondaryDark]];
     font-weight: bold;
+}
+
+.footer {
+    border-top: 1px solid [[ColorPalette::SecondaryLight]];
+    color:[[ColorPalette::SecondaryLight]];
+    margin-top: 20px;
+    font-size: 1.1em;
 }
 
 .siteTitle {
