@@ -534,7 +534,7 @@ Error: #f88
 
 OpenDDS is supported by [[Object Computing, Inc.|http://www.ociweb.com/]]</pre>
 </div>
-<div title="PageTemplate" modifier="OpenDDS" created="200911302019" modified="200911302100" changecount="2">
+<div title="PageTemplate" modifier="OpenDDS" created="200911302019" modified="200912120004" changecount="4">
 <pre>&lt;!--{{{--&gt;
 &lt;div class='header'&gt;
 &lt;div class='headerForeground'&gt;
@@ -550,6 +550,7 @@ OpenDDS is supported by [[Object Computing, Inc.|http://www.ociweb.com/]]</pre>
 &lt;div id='displayArea'&gt;
 &lt;div id='messageArea'&gt;&lt;/div&gt;
 &lt;div id='tiddlerDisplay'&gt;&lt;/div&gt;
+&lt;div class='footer'&gt;$Id$&lt;/div&gt;
 &lt;/div&gt;
 &lt;!--}}}--&gt;</pre>
 </div>
@@ -565,7 +566,7 @@ OpenDDS is supported by [[Object Computing, Inc.|http://www.ociweb.com/]]</pre>
 <div title="SiteUrl" modifier="OpenDDS" created="200911302027" changecount="1">
 <pre>http://www.ociweb.com/</pre>
 </div>
-<div title="StyleSheet" modifier="OpenDDS" created="200911302014" modified="200912011927" changecount="55">
+<div title="StyleSheet" modifier="OpenDDS" created="200911302014" modified="200912120011" changecount="64">
 <pre>a:hover {
     text-decoration: none;
 }
@@ -584,6 +585,13 @@ OpenDDS is supported by [[Object Computing, Inc.|http://www.ociweb.com/]]</pre>
 .headerForeground a {
     color:[[ColorPalette::SecondaryDark]];
     font-weight: bold;
+}
+
+.footer {
+    border-top: 1px solid [[ColorPalette::SecondaryLight]];
+    color:[[ColorPalette::SecondaryLight]];
+    margin-top: 20px;
+    font-size: 1.1em;
 }
 
 .siteTitle {
