@@ -1,3 +1,11 @@
+Sat Dec 12 00:14:58 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * docs/html/federation/index.html:
+        * docs/html/multicast/index.html:
+        * docs/html/template/index.html:
+
+          Updated HTML template.
+
 Fri Dec 11 23:59:24 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * docs/html/multicast/index.html:
